Energy Skate Park Basics: Send a message when creating track, see #3201
Energy Skate Park Basics: renamed "restart skater" to "return skater" in order to match the button that appears in the play area
Energy Skate Park Basics: Simsharing: added message for when the skater is dragged and released, see #3201
Made spline and spline node dragging bounds respect dynamic change in window size and aspect ratio
# 2.08.14 (59924) Jan 5, 2012
Energy Skate Park Basics: Added sim sharing for skater mass, see #3201
common: Make it so the track cannot be dragged out of the rectangle (minX=0, maxX=12, maxY=8) (doesn't dynamically adjust to aspect ratios)
common: Only show the grid for y>=0
common: Moved the grid a little to the left (and the default parabola a little to the right) so the grid numbers will be to the left of the default tracks
common: Fixed: The speedometer would go into some strange behavior if the skater was left unreturned for a bit of time (the needle would just start spinning for no apparent reason).  This was caused by the skater falling off the edge of the world.
common: Limited the number of user-created tracks to be 4
Removed the "simulation is paused" message when paused (unnecessary remnant)
Made return skater button same color as restart skater button
# 2.08.13 (59889) Jan 4, 2012
Energy Skate Park Basics: Added a "restart skater" button
# 2.08.12 (59884) Jan 4, 2012
common: Converted sim speed slider to "normal" and "slow motion" radio buttons
common: Changed "Return Skater" button to be green instead of orange to distinguish from "Reset all" Button
Energy Skate Park Basics: Reduced the size of the "W" track and adjusted layout so it doesn't overlap the control panels
Energy Skate Park Basics: Moved the pre-set parabola to the left so it doesn't encroach on the control panel
Energy Skate Park Basics: Simsharing: fixed: sim speed slider needs a name, see #3201